force-app/main/default/objects/IFv2_AdminOnly__c/IFv2_AdminOnly__c.object-meta.xml
<CustomObject>
    <description>Only to be used for the System Admin</description>
    <label>InsightFlow 2.0 Log</label>
    <nameField>
        <displayFormat>LOG-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>InsightFlow 2.0 Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>