force-app/main/default/objects/IFv2_AdminOnly__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Active checkbox which holds the Out of Office settngs</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>