force-app/main/default/objects/IFv2_AdminOnly__c/fields/ErrorDescription__c.field-meta.xml
<CustomField>
    <fullName>ErrorDescription__c</fullName>
    <description>Describes the error in detail</description>
    <label>Error Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>