force-app/main/default/objects/IFv2_AdminOnly__c/fields/ErrorType__c.field-meta.xml
<CustomField>
    <fullName>ErrorType__c</fullName>
    <description>Stores the type of error occured</description>
    <label>Error Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>