force-app/main/default/objects/IFv2_AdminOnly__c/fields/GlacierId__c.field-meta.xml
<CustomField>
    <fullName>GlacierId__c</fullName>
    <label>Archive Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>