force-app/main/default/objects/IFv2_AdminOnly__c/fields/HomeScreenCustomSettingId__c.field-meta.xml
<CustomField>
    <fullName>HomeScreenCustomSettingId__c</fullName>
    <description>This filed is  used to store home screen custom setting Id.</description>
    <inlineHelpText>This filed is  used to store home screen custom setting Id.</inlineHelpText>
    <label>Home Screen Custom Setting Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>