force-app/main/default/objects/IFv2_AdminOnly__c/fields/IFv2_ErrorDescription__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ErrorDescription__c</fullName>
    <label>Error Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>