force-app/main/default/objects/IFv2_AdminOnly__c/fields/ProcessInstanceWorkItemId__c.field-meta.xml
<CustomField>
    <fullName>ProcessInstanceWorkItemId__c</fullName>
    <label>ProcessInstance WorkItem Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>