force-app/main/default/objects/IFv2_AdminOnly__c/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The record on which the exception occured</description>
    <label>Record</label>
    <referenceTo>IFv2_Request__c</referenceTo>
    <relationshipName>AdminOnly</relationshipName>
    <type>Lookup</type>
</CustomField>