force-app/main/default/objects/IFv2_AdminOnly__c/fields/RecordName__c.field-meta.xml
<CustomField>
    <fullName>RecordName__c</fullName>
    <description>Describes the name of the record</description>
    <inlineHelpText>Describes the name of the record on which the error occurred</inlineHelpText>
    <label>Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>