force-app/main/default/objects/IFv2_AdminOnly__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>InsightFlow_2_0_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>