force-app/main/default/objects/IFv2_AdminOnly__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <label>User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>