force-app/main/default/objects/IFv2_AdminOnly__c/fields/Vault__c.field-meta.xml
<CustomField>
    <fullName>Vault__c</fullName>
    <description>Used to store AWS Glacier vault</description>
    <label>Vault</label>
    <length>255</length>
    <type>Text</type>
</CustomField>