force-app/main/default/objects/IFv2_AdminOnly__c/fields/WorkflowName__c.field-meta.xml
<CustomField>
    <fullName>WorkflowName__c</fullName>
    <description>Holds Workflow Name</description>
    <label>Workflow Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>