force-app/main/default/objects/IFv2_AdminOnly__c/recordTypes/Archival_Logs.recordType-meta.xml
<RecordType>
    <fullName>Archival_Logs</fullName>
    <active>true</active>
    <label>Archival Logs</label>
</RecordType>