force-app/main/default/objects/IFv2_AdminOnly__c/recordTypes/ErrorLogs.recordType-meta.xml
<RecordType>
    <fullName>ErrorLogs</fullName>
    <active>true</active>
    <description>Used for the error logs</description>
    <label>Error Logs</label>
</RecordType>