force-app/main/default/objects/IFv2_AdminOnly__c/recordTypes/Favorite.recordType-meta.xml
<RecordType>
    <fullName>Favorite</fullName>
    <active>true</active>
    <description>This record type is used for storing favorite on home page</description>
    <label>Favorite</label>
</RecordType>