force-app/main/default/objects/IFv2_AdminOnly__c/recordTypes/OutOfOfficeLogs.recordType-meta.xml
<RecordType>
    <fullName>OutOfOfficeLogs</fullName>
    <active>true</active>
    <label>OutOfOfficeLogs</label>
</RecordType>