force-app/main/default/objects/IFv2_AdminOnly__c/recordTypes/P28.recordType-meta.xml
<RecordType>
    <fullName>P28</fullName>
    <active>true</active>
    <description>Record type for P28</description>
    <label>P28</label>
</RecordType>