force-app/main/default/objects/IFv2_AdminOnly__c/recordTypes/P28_Logs.recordType-meta.xml
<RecordType>
    <fullName>P28_Logs</fullName>
    <active>true</active>
    <description>Record type for P28</description>
    <label>P28 Logs</label>
</RecordType>