force-app/main/default/objects/IFv2_AdminOnly__c/recordTypes/ReassignmentLogs.recordType-meta.xml
<RecordType>
    <fullName>ReassignmentLogs</fullName>
    <active>true</active>
    <description>Used to store Out of office users Assignee logs information</description>
    <label>Reassignment Logs</label>
</RecordType>