force-app/main/default/objects/IFv2_AdminOnly__c/recordTypes/UnAssignedOOOLogs.recordType-meta.xml
<RecordType>
    <fullName>UnAssignedOOOLogs</fullName>
    <active>true</active>
    <description>This log contains the records details of the un assigned out of office records by the OOO batch job</description>
    <label>UnAssignedOOOLogs</label>
</RecordType>