force-app/main/default/objects/IFv2_AdminOnly__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WorkflowName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Active__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>ErrorDescription__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>IFv2_AdminOnly__c.OutOfOfficeLogs,IFv2_AdminOnly__c.ReassignmentLogs</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Sanampudi</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>