force-app/main/default/objects/IFv2_AdminOnly__c/listViews/OutOfOffice_Logs.listView-meta.xml
<ListView>
    <fullName>OutOfOffice_Logs</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>User__c</columns>
    <columns>WorkflowName__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>IFv2_AdminOnly__c.OutOfOfficeLogs</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>SUSANA RODRIGUEZ SAEZ</value>
    </filters>
    <label>OutOfOffice Logs</label>
</ListView>