force-app/main/default/objects/IFv2_AdminOnly__c/listViews/Reassignment_logs.listView-meta.xml
<ListView>
    <fullName>Reassignment_logs</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>User__c</columns>
    <columns>WorkflowName__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>IFv2_AdminOnly__c.ReassignmentLogs</value>
    </filters>
    <label>Reassignment logs</label>
</ListView>