force-app/main/default/objects/IFv2_AdminOnly__c/listViews/UnAssigned_Logs.listView-meta.xml
<ListView>
    <fullName>UnAssigned_Logs</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>IFv2_ErrorDescription__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>IFv2_AdminOnly__c.UnAssignedOOOLogs</value>
    </filters>
    <filters>
        <field>User__c</field>
        <operation>contains</operation>
        <value>Kat</value>
    </filters>
    <label>UnAssigned Logs</label>
</ListView>